Feat:Clear all outputs

--- a/CH04_01_Function.ipynb
+++ b/CH04_01_Function.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 함수(Function)\n",
+    "# 04장 함수(Function)\n",
     "---\n",
     "- Dates : Aug 20, 2024  \n",
     "- Author : JaeEun Yoo\n",
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "둘 다 짝수입니다 !\n"
+     ]
+    }
+   ],
    "source": [
     "# 입력 a, b를 받아 각각 제곱이 짝수인지 판별하는 프로그램\n",
     "a = 4\n",
@@ -441,9 +449,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "def addormat(**kwargs):\n",
     "    if kwargs['op'] == 'add':\n",
@@ -550,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
