--- a/CH04_01_Function.ipynb
+++ b/CH04_01_Function.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 04장 함수(Function)\n",
     "---\n",
-    "- Dates : Aug 20, 2024  \n",
+    "- Dates : Aug 27, 2024  \n",
     "- Author : JaeEun Yoo\n",
     "---\n",
     "\n",
@@ -134,7 +134,7 @@
     "\n",
     "print(add([2,3,4], [2,3,1]))\n",
     "\n",
-    "print(add('Python', 'MMMIL'))\n",
+    "print(add('Python', 'Sejong'))\n",
     "\n",
     "print(add((2,3,1), (1,2,1)))"
    ]
@@ -186,7 +186,7 @@
     "def greet_name(name):\n",
     "    print(\"Hello, \" + name)\n",
     "    \n",
-    "greet_name(\"Jerry\")"
+    "greet_name(\"JaeEun\")"
    ]
   },
   {
@@ -222,6 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 리스트에 두 개의 문자열 중 중복된 문자를 추가한 뒤 리스트를 반환하는 함수\n",
     "def intersect(val1, val2):\n",
     "    result = []\n",
     "    for x in val1:\n",
@@ -296,9 +297,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Global\n",
     "a = 43\n",
     "\n",
     "def add(x, y):\n",
+    "    # Local\n",
     "    a = x + y\n",
     "    print(a)\n",
     "    return a\n",
@@ -314,9 +317,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Global\n",
     "a = 43\n",
     "\n",
     "def add(x, y):\n",
+    "    # Global init\n",
     "    global a\n",
     "    a = x + y\n",
     "    print(a)\n",
@@ -334,9 +339,12 @@
    "outputs": [],
    "source": [
     "def test():\n",
+    "    # Local\n",
     "    val = 5\n",
     "    print(val)\n",
+    "\n",
     "test()\n",
+    "# val?\n",
     "print(val)"
    ]
   },
@@ -347,6 +355,7 @@
    "outputs": [],
    "source": [
     "def test():\n",
+    "    # global\n",
     "    global val\n",
     "    val = 5\n",
     "    print(val)\n",
@@ -362,7 +371,7 @@
     "\n",
     "### (1) * args\n",
     "- N 개의 매개변수를 받음.\n",
-    "- * 을 이용.\n",
+    "- '*' 을 이용.\n",
     "- *val, *python 등과 같이 *이름이라고 마음대로 선언해도 됨.\n",
     "- 보통은 arguments의 약자로 *args 로 사용.\n",
     "- tuple로 반환."
@@ -473,6 +482,24 @@
     "a = [1,2,3]\n",
     "a.append()\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=[1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.append()"
    ]
   },
   {
