Feat:CH03 Answer edit

--- a/CH03_04_Answers.ipynb
+++ b/CH03_04_Answers.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +52,20 @@
     "milk = 1\n",
     "eggs = 0\n",
     "\n",
+    "# 우유가 있다면\n",
     "if milk==1:\n",
     "    print('milk : ',milk)\n",
     "    \n",
+    "    # 계란이 없다면\n",
     "    if not eggs==0:\n",
     "        print('eggs : ', eggs)\n",
-    "        \n",
+    "    \n",
+    "    # 계란이 있다면\n",
     "    else:\n",
-    "        print('No eggs!')"
+    "        print('No eggs!')\n",
+    "# 우유가 없다면\n",
+    "else:\n",
+    "    pass"
    ]
   },
   {
@@ -534,6 +540,20 @@
     "        print(i*j, end=\" \") \n",
     "    print('') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
