--- a/W03_CH05_Class.ipynb
+++ b/W03_CH05_Class.ipynb
@@ -372,7 +372,7 @@
    "id": "9f5ddbde-8ee9-4e95-86fc-5c6fff6e43ed",
    "metadata": {},
    "source": [
-    "### 인스턴스 속성 VS 클래스 속성"
+    "### 인스턴스 속성 VS 클래스 속성 알아보기"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "source": [
     "* 인스턴스 속성\n",
     "   * __init__ 이나 각각의 메소드에서 self 사용한 속성\n",
-    "   * 인스턴스 속성은 인스턴스별로 각자 다른 값은 가짐\n",
+    "   * 인스턴스 속성은 인스턴스별로 각자 다른 값을 가짐\n",
     "   * 인스턴스 속성의 특징은 self.속성을 사용함"
    ]
   },
@@ -394,6 +394,7 @@
    "outputs": [],
    "source": [
     "class Member:\n",
+    "    # value는 Member라는 클래스 안에서 10으로 초기화\n",
     "    value = 10\n",
     "\n",
     "    def info(self, name, age, address):\n",
@@ -451,6 +452,7 @@
     "        self.address = address\n",
     "        print('저의 이름은 {0}이고, 나이는 {1}, 사는 곳은 {2} 입니다'.format(self.name, self.age, self.address))\n",
     "\n",
+    "        # Member라는 클래스의 value라는 리스트에 age 추가\n",
     "        Member.value.append(age)\n",
     "        print('클래스 속성 {}'.format(Member.value))\n",
     "\n",
@@ -460,6 +462,7 @@
     "        self.address = address\n",
     "        print('저의 이름은 {0}이고, 나이는 {1}, 사는 곳은 {2} 입니다'.format(self.name, self.age, self.address))\n",
     "\n",
+    "        # Member라는 클래스의 value라는 리스트에 age 추가\n",
     "        Member.value.append(age)\n",
     "        print('클래스 속성 {}'.format(Member.value))\n"
    ]
@@ -638,6 +641,14 @@
     "a = FourCal()\n",
     "a.setdata(4, 2)\n",
     "a.add()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d306fc9-040c-499a-97a0-16df9efbcea3",
+   "metadata": {},
+   "source": [
+    "### init 활용하여 속성 초깃값 정의"
    ]
   },
   {
@@ -1009,15 +1020,17 @@
   {
    "cell_type": "markdown",
    "id": "7881eec3-6dd1-456c-95e2-6c9db766e2b2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "--------------\n",
     "## <Question 01>\n",
     "> **「\"학생 클래스를 생성하세요.\"」**  \n",
     "\n",
     "**01)** 이름, 학교, 학년은 클래스 생성 시 입력받아 객체를 생성합니다.  \n",
-    "**02)** 이름, 학교, 학년을 출력하는 메서드가 필요합니다.\n",
-    "**03)** 학년을 변경할 수 있는 메서드가 필요합니다.  \n",
+    "**02)** 이름, 학교, 학년을 출력하는 메서드가 필요합니다. (getInfo) \n",
+    "**03)** 학년을 변경할 수 있는 메서드가 필요합니다.  (setGrade)\n",
     "  "
    ]
   },
@@ -1030,15 +1043,10 @@
    "source": [
     "class Student:\n",
     "    def __init__(self, name, school, grade):\n",
-    "        self.name = name\n",
-    "        self.school = school\n",
-    "        self.grade = grade\n",
     "\n",
     "    def getInfo(self):\n",
-    "        print('저의 이름은 {0}이고, 학교는 {1}, 학년은 {2} 입니다'.format(self.name, self.school, self.grade))\n",
     "\n",
     "    def setGrade(self, ch_grade):\n",
-    "        self.grade = ch_grade\n",
     "\n"
    ]
   },
@@ -1052,7 +1060,7 @@
     "> **「\"학생 클래스를 상속받아 선생님 클래스 생성하세요.\"」**  \n",
     "\n",
     "**01)** 클래스명은 Teacher입니다.  \n",
-    "**02)** \b강좌명을 입력받는 메서드가 필요합니다.  \n",
+    "**02)** \b강좌명을 입력받는 메서드가 필요합니다. (setCls)  \n",
     "**03)** 정보 출력(이름, 학교, 학년) 메서드를 오버라이딩하여 강좌명을 출력하세요.\n",
     "  "
    ]
@@ -1066,10 +1074,8 @@
    "source": [
     "class Teacher(Student):\n",
     "    def setCls(self,clss):\n",
-    "        self.cls = clss\n",
     "\n",
     "    def getInfo(self):\n",
-    "        print('저의 이름은 {0}이고, 학교는 {1}, 학년은 {2}, 담당중인 강좌는 {3} 입니다'.format(self.name, self.school, self.grade, self.cls))\n",
     "\n",
     "\n"
    ]
