--- a/W03_CH07_Pandas.ipynb
+++ b/W03_CH07_Pandas.ipynb
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./ASOS_지점정보_240624.csv',encoding='cp949')"
+    "df = pd.read_csv('./ASOS_info.csv',encoding='cp949')"
    ]
   },
   {
